--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,32 @@
-image: registry.gitlab.com/kodality-public/gitlab-ci-builder:latest
-
 cache:
   key: "$CI_PROJECT_NAME"
   paths:
     - /tmp/kefhir
+    - .gradle/wrapper
     - .gradle/caches
 
 stages:
+- prepare
 - build
 - test
 - release
 
+meta-build-image:
+  image: docker:stable
+  services:
+    - docker:dind
+  stage: prepare
+  script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker build -t $CI_REGISTRY/kodality-public/kefhir/kefhir-builder:latest -f .gitlab-ci-Dockerfile  .
+    - docker push $CI_REGISTRY/kodality-public/kefhir/kefhir-builder:latest
+  only:
+    - master
+    changes:
+      - .gitlab-ci-Dockerfile
+
 build:
+  image: openjdk:17.0.2-slim
   stage: build
   artifacts:
     paths:
@@ -21,6 +36,7 @@ build:
     - ./gradlew assemble
 
 test:
+  image: registry.gitlab.com/kodality-public/kefhir/kefhir-builder:latest
   stage: test
   dependencies:
     - build
@@ -30,28 +46,30 @@ test:
   artifacts:
     when: always
     name: "Test_Result"
-    expire_in: 7 D
+    expire_in: 1 day
     paths:
       - "./kefhir-test-app/test-reports"
     reports:
       junit: '*/build/test-results/test/TEST-*.xml'
 
 release snapshot:
+  image: openjdk:17.0.2-slim
   stage: release
   dependencies:
     - build
-  variables:
-    DOCKER_DRIVER: overlay2
   script:
-    - ./gradlew assemble publish
+    - ./gradlew publish
   only:
     - master
 
 release tag:
+  image: openjdk:17.0.2-slim
   stage: release
+  dependencies:
+    - build
   script:
     - export APP_VERSION="$CI_COMMIT_REF_NAME"
-    - ./gradlew assemble publish -Pversion="$APP_VERSION"
+    - ./gradlew publish -Pversion="$APP_VERSION"
   only:
     - /^\d*\.\d*\.\d*$/
   except:
