--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,8 @@ cache:
   key: "$CI_PROJECT_NAME"
   paths:
     - /tmp/kefhir
-    - .gradle/wrapper
-    - .gradle/caches
+    - .gradle
+    - build
 
 stages:
 - prepare
@@ -33,7 +33,7 @@ build:
 #      - "**/build"
 #    expire_in: 1 hour
   script:
-    - ./gradlew assemble
+    - ./gradlew clean assemble
 
 test-junit:
   stage: test
