--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,13 +19,13 @@ build-builder:
   stage: prepare
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build -t $CI_REGISTRY/kodality-public/kefhir/kefhir-builder:latest -f .gitlab-ci-Dockerfile  .
+    - docker build -t $CI_REGISTRY/kodality-public/kefhir/kefhir-builder:latest -f .gitlab-ci.Dockerfile  .
     - docker push $CI_REGISTRY/kodality-public/kefhir/kefhir-builder:latest
   only:
     refs:
       - master
     changes:
-      - .gitlab-ci-Dockerfile
+      - .gitlab-ci.Dockerfile
 
 build:
   stage: build
