app user configurable

--- a/kefhir-test-app/src/main/resources/application.yml
+++ b/kefhir-test-app/src/main/resources/application.yml
@@ -22,6 +22,8 @@ liquibase:
       enabled: true
       change-log: 'classpath:changelog.xml'
       default-schema: 'public'
+      parameters:
+        app-username: ${datasources.default.username}
 
 endpoints:
   health:
