--- a/kefhir-test-app/build.gradle
+++ b/kefhir-test-app/build.gradle
@@ -15,6 +15,7 @@ dependencies {
   api project(':validation-profile')
   api project(':feature-conditional-reference')
   api project(':kefhir-scheduler')
+  api project(':operation-patient-everything')
 
   implementation platform("io.micronaut:micronaut-bom:$micronautVersion")
   annotationProcessor "io.micronaut:micronaut-inject-java"
