--- a/kefhir-test-app/src/main/resources/application.yml
+++ b/kefhir-test-app/src/main/resources/application.yml
@@ -31,3 +31,4 @@ endpoints:
     details-visible: ANONYMOUS
     sensitive: false
 
+kefhir.conformance.definitions-url: https://kexus.kodality.com/repository/store-public/kefhir/definitions.json.zip
