--- a/pg-core/build.gradle
+++ b/pg-core/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
   api project(':tx-manager')
 
-  api "org.postgresql:postgresql:42.3.1"
+  api 'org.postgresql:postgresql:42.5.0'
   api "io.micronaut.sql:micronaut-jdbc-hikari"
   api "org.springframework:spring-jdbc"
   api "io.micronaut.liquibase:micronaut-liquibase"
