--- a/fhir-structures/build.gradle
+++ b/fhir-structures/build.gradle
@@ -1,21 +1,12 @@
 dependencies {
-<<<<<<< Updated upstream
-  api 'ca.uhn.hapi.fhir:hapi-fhir-base:6.1.1'
-  api 'ca.uhn.hapi.fhir:hapi-fhir-structures-r4:6.1.1'
-  api 'ca.uhn.hapi.fhir:hapi-fhir-validation-resources-r4:6.1.1'
-  api('ca.uhn.hapi.fhir:hapi-fhir-validation:6.1.1') {
+  api "ca.uhn.hapi.fhir:hapi-fhir-base:$hapiVersion"
+  api "ca.uhn.hapi.fhir:hapi-fhir-structures-r4:$hapiVersion"
+  api "ca.uhn.hapi.fhir:hapi-fhir-validation-resources-r4:$hapiVersion"
+  api("ca.uhn.hapi.fhir:hapi-fhir-validation:$hapiVersion") {
     exclude group: 'org.apache.commons', module: 'commons-compress'
   }
 
   implementation 'org.ehcache:ehcache:3.10.1'
-=======
-  api "ca.uhn.hapi.fhir:hapi-fhir-base:$hapiVersion"
-  api "ca.uhn.hapi.fhir:hapi-fhir-structures-r4:$hapiVersion"
-  api "ca.uhn.hapi.fhir:hapi-fhir-validation-resources-r4:$hapiVersion"
-  api "ca.uhn.hapi.fhir:hapi-fhir-validation:$hapiVersion"
-
-  implementation "org.ehcache:ehcache:3.9.9"
->>>>>>> Stashed changes
 
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
   testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.9.0"
