--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
   repositories {
     mavenCentral()
     maven { url "https://kexus.kodality.com/repository/maven-public/" }
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots" } // used for hapi snapshots
   }
 
   dependencies {
