--- a/kefhir-test-app/src/main/resources/application.yml
+++ b/kefhir-test-app/src/main/resources/application.yml
@@ -31,5 +31,6 @@ endpoints:
     details-visible: ANONYMOUS
     sensitive: false
 
-kefhir.conformance.definitions-url: http://hl7.org/fhir/5.0.0-snapshot3/definitions.json.zip #fixme to stable version when released
-#kefhir.conformance.definitions-url: https://kexus.kodality.com/repository/store-public/kefhir/definitions.json.zip
+## due to this https://chat.fhir.org/#narrow/stream/179166-implementers/topic/composite.20search.20parameters.20in.20R5, some definitions altered manually and uploaded to kodality repository
+kefhir.conformance.definitions-url: https://kexus.kodality.com/repository/store-public/kefhir/defs-r5.zip
+
