--- a/kefhir-test-app/build.gradle
+++ b/kefhir-test-app/build.gradle
@@ -16,6 +16,7 @@ dependencies {
   api project(':feature-conditional-reference')
   api project(':kefhir-scheduler')
   api project(':operation-patient-everything')
+  api project(':openapi')
 
   implementation platform("io.micronaut:micronaut-bom:$micronautVersion")
   annotationProcessor "io.micronaut:micronaut-inject-java"
