--- a/fhir-rest/build.gradle
+++ b/fhir-rest/build.gradle
@@ -4,6 +4,6 @@ dependencies {
   api project(':tx-manager')
   api project(':kefhir-core')
 
-  api "io.micronaut:micronaut-management"
+  implementation "io.micronaut:micronaut-management"
   implementation "io.micronaut:micronaut-http-server"
 }
