--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
 version=R5-SNAPSHOT
-micronautVersion=3.8.7
-hapiVersion=6.6.0
+micronautVersion=3.10.2
+hapiVersion=6.8.5
+springJdbcVersion=5.3.30
+postgresqlVersion=42.6.0
+ehcacheVersion=3.10.8
+jacksonVersion=2.15.3
