--- a/pg-core/build.gradle
+++ b/pg-core/build.gradle
@@ -1,8 +1,8 @@
 dependencies {
   api project(':tx-manager')
 
-  api 'org.postgresql:postgresql:42.5.0'
+  api "org.postgresql:postgresql:${postgresqlVersion}"
+  api "org.springframework:spring-jdbc:${springJdbcVersion}"
   api "io.micronaut.sql:micronaut-jdbc-hikari"
-  api "org.springframework:spring-jdbc"
   api "io.micronaut.liquibase:micronaut-liquibase"
 }
