demicronaut and springify

--- a/fhirest-test-app/src/main/resources/changelog.yml
+++ b/fhirest-test-app/src/main/resources/changelog.yml
@@ -8,6 +8,6 @@ databaseChangeLog:
   - include:
       file: pg-search/changelog/changelog.xml
       relativeToChangelogFile: false
-#  - include:
-#      file: pg-fhirest-scheduler/changelog/changelog.xml
-#      relativeToChangelogFile: false
+  - include:
+      file: pg-fhirest-scheduler/changelog/changelog.xml
+      relativeToChangelogFile: false
