--- a/pg-store/build.gradle
+++ b/pg-store/build.gradle
@@ -3,4 +3,6 @@ dependencies {
   api project(':pg-core')
   api project(':fhir-structures')
   api project(':fhirest-core')
+
+  implementation "org.liquibase:liquibase-core"
 }
