--- a/pg-search/build.gradle
+++ b/pg-search/build.gradle
@@ -5,6 +5,8 @@ dependencies {
   api project(':fhir-structures')
   api project(':fhirest-core')
 
+  implementation "org.liquibase:liquibase-core"
+
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
   testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.9.0"
 }
