--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -12,7 +12,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Setup Gradle
-        uses: gradle/actions@v3.1.0
+        uses: gradle/actions/setup-gradle@v3.1.0
 
       - name: Build with Gradle
         run: ./gradlew build
