--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,7 @@ subprojects { Project project ->
       maven {
         url = uri("https://maven.pkg.github.com/fhirest/fhirest")
         credentials {
-          username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
+          username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USER")
           password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
         }
       }
