--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -25,4 +25,5 @@ jobs:
       - name: Publish package
         run: ./gradlew publish
         env:
+          GITHUB_USER: ${{ env.GITHUB_ACTOR }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
