--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -1,4 +1,13 @@
-on: [workflow_dispatch,push,pull_request]
+name: Release snapshot
+on:
+  workflow_run:
+    workflows: ["Build"]
+    branches: [master]
+    types:
+      - completed
+
+permissions:
+  packages: write
 
 jobs:
   build:
@@ -13,14 +22,6 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3.1.0
-
-      - name: Build
-        run: ./gradlew build
-
-#      - name: Upload build artifacts
-#        uses: actions/upload-artifact@v4
-#        with:
-#          path: '*/build/libs'
 
       - name: Publish package
         run: ./gradlew publish
