--- a/build.gradle
+++ b/build.gradle
@@ -54,4 +54,22 @@ subprojects { Project project ->
     withSourcesJar()
   }
 
+  publishing {
+    publications {
+      mavenJava(MavenPublication) {
+        artifactId = project.name
+        from components.java
+      }
+    }
+    repositories {
+      maven {
+        url = uri("https://maven.pkg.github.com/fhirest/fhirest")
+        credentials {
+          username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USER")
+          password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+        }
+      }
+    }
+  }
+
 }
