--- a/.github/workflows/release-snapshot.yml
+++ b/.github/workflows/release-snapshot.yml
@@ -1,4 +1,4 @@
-name: Release snapshot
+name: Release Snapshot
 on:
   workflow_run:
     workflows: ["Build"]
@@ -13,7 +13,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build
+    name: Release Snapshot
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
