--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build
+    name: Release Tag
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
