--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,8 @@ jobs:
 
   newman:
     runs-on: ubuntu-latest
-    name: Release Snapshot
+    name: Run Newman
+    needs: build
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
