--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
   newman:
     runs-on: ubuntu-latest
     name: Run Newman
-    needs: build
+#    needs: build
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
@@ -46,7 +46,8 @@ jobs:
         with:
           node-version: '20'
       - run: npm install -g newman
-      - run: kefhir-test-app/run-tests.sh
+      - working-directory: kefhir-test-app
+        run: ./run-tests.sh
 
       - uses: actions/upload-artifact@v4
         with:
