--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
   newman:
     runs-on: ubuntu-latest
     name: Run Newman
-#    needs: build
+    needs: build
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
@@ -51,4 +51,4 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: newman
-          path: "./kefhir-test-app/test-reports/*"
+          path: "./fhirest-test-app/test-reports/*"
