--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,3 +31,24 @@ jobs:
           name: junit
           path: "*/build/test-results/test/TEST-*.xml"
 
+  newman:
+    runs-on: ubuntu-latest
+    name: Run Newman
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      -  uses: gradle/actions/setup-gradle@v3.1.0
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: '20'
+      - run: npm install -g newman
+      - run: fhirest-test-app/run-tests.sh
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: newman
+          path: "./fhirest-test-app/test-reports/*"
