--- a/fhirest-test-app/src/main/resources/application.yml
+++ b/fhirest-test-app/src/main/resources/application.yml
@@ -30,3 +30,4 @@ management:
 
 ## due to this https://chat.fhir.org/#narrow/stream/179166-implementers/topic/composite.20search.20parameters.20in.20R5, some definitions altered manually and uploaded to kodality repository
 fhirest.conformance.definitions-url: https://kexus.kodality.com/repository/store-public/kefhir/defs-r5.zip
+# fhirest.oauth.jwks-url: https://auth.kodality.dev/realms/terminology/protocol/openid-connect/certs
