maven central publishing

--- a/auth-smart/build.gradle
+++ b/auth-smart/build.gradle
@@ -1,3 +1,6 @@
+
+description = "FhirEST module - smart-app-launch implementation"
+
 dependencies {
   api project(':auth-core')
   api project(':fhir-rest')
