--- a/fhir-conformance/build.gradle
+++ b/fhir-conformance/build.gradle
@@ -1,3 +1,6 @@
+
+description = "FhirEST module - Provides possibilities to load initial conformance resources"
+
 dependencies {
   api project(':fhirest-core')
   api project(':fhir-structures')
