--- a/fhirest-core/build.gradle
+++ b/fhirest-core/build.gradle
@@ -1,4 +1,6 @@
 
+description = "FhirEST module - Core module, responsible for fhir resouce lifecycle, conformance initialization"
+
 dependencies {
   api project(':fhir-structures')
   api project(':tx-manager')
