--- a/fhirest-scheduler/build.gradle
+++ b/fhirest-scheduler/build.gradle
@@ -1,3 +1,6 @@
+
+description = "FhirEST module - Provides possibilities to perform some actions on resource at some given time in the future"
+
 dependencies {
   api project(':pg-core')
   api project(':fhirest-core')
