--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -9,7 +9,7 @@ permissions:
   packages: write
 
 jobs:
-  build:
+  publish-to-github:
     runs-on: ubuntu-latest
     name: Release Tag
     steps:
@@ -27,3 +27,23 @@ jobs:
         env:
           GITHUB_USER: ${{ env.GITHUB_ACTOR }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  publish-to-maven-central:
+    runs-on: ubuntu-latest
+    name: Release Tag
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3.1.0
+
+      - name: Publish package
+        run: ./publish-to-maven-central.sh $GITHUB_REF_NAME
+        env:
+          SONATYPE_USER: ${{ secrets.SONATYPE_USER }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          GPG_KEY: ${{ secrets.GPG_KEY }}
+          GPG_PASS: ${{ secrets.GPG_PASS }}
