--- a/auth-openid/build.gradle
+++ b/auth-openid/build.gradle
@@ -1,3 +1,7 @@
+
+
+description = "FhirEST module - simple oauth implementation"
+
 dependencies {
   api project(':auth-rest')
   implementation("com.auth0:java-jwt:4.0.0")
