--- a/auth-rest/build.gradle
+++ b/auth-rest/build.gradle
@@ -1,3 +1,6 @@
+
+description = "FhirEST module - base interfaces for adding authentication to rest endpoints"
+
 dependencies {
   api project(':auth-core')
   api project(':fhir-rest')
