--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   publish-to-github:
     runs-on: ubuntu-latest
-    name: Release Tag
+    name: Release To Github Packages
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
@@ -29,7 +29,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   publish-to-maven-central:
     runs-on: ubuntu-latest
-    name: Release Tag
+    name: Release To Maven Central
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
