--- a/fhirest-test-app/src/main/resources/changelog.yml
+++ b/fhirest-test-app/src/main/resources/changelog.yml
@@ -11,6 +11,6 @@ databaseChangeLog:
   - include:
       file: pg-fhirest-scheduler/changelog/changelog.xml
       relativeToChangelogFile: false
-  - include:
-      file: fhirest-hashchain/changelog/changelog.yml
-      relativeToChangelogFile: false
+#  - include:
+#      file: fhirest-hashchain/changelog/changelog.yml
+#      relativeToChangelogFile: false
