--- a/fhirest-test-app/src/main/resources/application.yml
+++ b/fhirest-test-app/src/main/resources/application.yml
@@ -2,7 +2,6 @@ server:
   port: 8181
 
 spring:
-  datasource:
     default:
       url: ${DB_URL:jdbc:postgresql://localhost:5151/fhirestdb}
       username: ${DB_APP_USER:fhirest_app}
@@ -21,6 +20,22 @@ spring:
         change-log: 'classpath:changelog.yml'
         parameters:
           app-username: ${spring.datasource.default.username}
+
+
+#    datasource:
+#      url: ${DB_URL:jdbc:postgresql://localhost:5151/fhirestdb}
+#      username: ${DB_APP_USER:fhirest_app}
+#      password: ${DB_APP_PASSWORD:test}
+#      maxActive: ${DB_POOL_SIZE:1}
+#      driverClassName: org.postgresql.Driver
+#      type: com.zaxxer.hikari.HikariDataSource
+#    liquibase:
+#      url: ${DB_URL:jdbc:postgresql://localhost:5151/fhirestdb}
+#      user: postgres
+#      password: postgres
+#      change-log: 'classpath:changelog.yml'
+#      parameters:
+#        app-username: ${spring.datasource.username}
 
 
 management:
