--- a/fhirest-hashchain/build.gradle
+++ b/fhirest-hashchain/build.gradle
@@ -3,7 +3,7 @@ description = "FhirEST module - stamps all resource versions into a chain for da
 
 dependencies {
   api project(':fhirest-core')
-  api project(':pg-store')
+  api project(':pg-core')
   implementation "org.springframework.retry:spring-retry"
   implementation "org.springframework.boot:spring-boot-starter-aop"
 }
