feature scheduler jobs REST api

--- a/fhirest-scheduler/build.gradle
+++ b/fhirest-scheduler/build.gradle
@@ -6,4 +6,5 @@ dependencies {
   api project(':fhirest-core')
 
   implementation "org.liquibase:liquibase-core"
+  implementation 'org.springframework:spring-web'
 }
