--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,5 @@ hapiVersion=6.10.5
 postgresqlVersion=42.7.3
 liquibaseVersion=4.29.1
 ehcacheVersion=3.10.8
+caffeineVersion=3.1.8
 jacksonVersion=2.16.2
