--- a/fhirest-test-app/build.gradle
+++ b/fhirest-test-app/build.gradle
@@ -30,6 +30,10 @@ bootRun {
   }
 }
 
+bootJar {
+  enabled false
+}
+
 tasks.withType(PublishToMavenRepository).configureEach { it.enabled = false }
 tasks.withType(PublishToMavenLocal).configureEach { it.enabled = false }
 //uploadArchives.enabled = false
